# Sandokan

./: .gitignore  CMakeLists.txt  Config.cmake.in  HOW_TO_USE_SANDOKAN.txt  LICENSE  README.md  emnist_bench.csv  fashion_mnist_bench.csv  letternet.sand
Formula/: sandokan.rb
examples/: CMakeLists.txt
examples/air_quality/: CMakeLists.txt  main.cpp
examples/benchmark/: CMakeLists.txt  main.cpp
examples/emnist_bench/: CMakeLists.txt  main.cpp
examples/emnist_letters/: CMakeLists.txt  main.cpp
examples/fashion_mnist_bench/: CMakeLists.txt  main.cpp
examples/tabular_demo/: CMakeLists.txt  main.cpp
include/: sandokan.h
include/sandokan/: allocator.h  dataset.h  inference.h  io.h  layer.h  layers.h  loss.h  module.h  network.h  ops.h  optim.h  tabular.h  train.h  workspace.h
neural_net/: CMakeLists.txt  bench.cpp  dataloader.h  main.cpp  network.h  pmad.h  train.h
pmad/: main.c
pmad/include/: PMAD.h  incPMAD.h  plad_bridge.h
pmad/include/structures/: BlockHeader.h  MemoryPool.h  SizeClass.h
pmad/src/: BlockHeader.c  MemoryPool.c  PMAD.c  incPmad.c
test_project/: CMakeLists.txt  main.cpp
